Geolocation search using PostGIS added
